Fix alignment issue in PokemonDetails component

--- a/src/components/Pokemon.css
+++ b/src/components/Pokemon.css
@@ -124,6 +124,7 @@ a {
 	width: 7rem;
 	height: 4rem;
 	font-size: 15px;
+	margin-top: 2rem;
 }
 
 .list-img {
